--- a/css/global.css
+++ b/css/global.css
@@ -32,9 +32,6 @@ body {
     font-weight: bold;
     font-size: 1.6rem;
 }
-main .container-fluid .row .main-section:nth-of-type(0) {
-    border: 20px solid red;
-}
 .container-fluid .row .main-section {
     background-color: gray;
     min-height: 2000px;
@@ -43,6 +40,8 @@ main .container-fluid .row .main-section:nth-of-type(0) {
     margin-top: 20px;
     padding: 0 40px 20px 40px;
     border-bottom: 10px solid white;
+    border-right: 20px solid white;
+    border-left: 20px solid white;
 }
 .container-fluid .row .main-section:last-child {
     margin-bottom: 50px;
@@ -50,10 +49,14 @@ main .container-fluid .row .main-section:nth-of-type(0) {
 
 @media (min-width: 768px) {
     .container-fluid .row .main-section {
-        border-right: 20px solid white;
         border-bottom: none;
         padding: 0 50px 20px 50px;
         margin-bottom: 50px;
+        gap: 20px;
+        border-right: 20px solid white;
+    }
+    .container-fluid .row .main-section:nth-of-type(1) {
+        border-left: 20px solid white;
     }
 }
 @media (min-width: 576px) and (max-width: 767px) {
@@ -62,7 +65,10 @@ main .container-fluid .row .main-section:nth-of-type(0) {
         border-bottom: 10px solid white;
         padding: 0 50px 20px 50px;
     }
-    .container-fluid .row .main-section:last-child {
+    .container-fluid .row .main-section:nth-of-type(3) {
         margin-bottom: 50px;
+    }
+    .container-fluid .row .main-section:nth-of-type(1) {
+        border-left: 20px solid white;
     }
 }
